--- a/src/sync_app/view/templates/table_ws/index.html
+++ b/src/sync_app/view/templates/table_ws/index.html
@@ -1,4 +1,4 @@
-
+<!-- 
 <!DOCTYPE html>
 <html>
 <head>
@@ -74,6 +74,99 @@
         <td>${job.date}</td>
         <td>${job.site}</td>
       `;
+    };
+  </script>
+</body>
+</html> -->
+
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Vagas de Emprego</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+  <style>
+    body {
+      background-color: #f1f1f1;
+      font-family: Arial, sans-serif;
+    }
+
+    body.dark-mode {
+      background-color: #333;
+      color: #fff;
+    }
+
+    body.dark-mode h1 {
+      color: #fff;
+    }
+
+    body.dark-mode th,
+    body.dark-mode td {
+      color: #fff;
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <div class="d-flex justify-content-between align-items-center">
+      <h1>Vagas de Emprego</h1>
+      <button id="toggleMode" class="btn btn-primary">Modo Noturno</button>
+    </div>
+    
+    <table id="jobTable" class="table table-striped table-bordered"> 
+      <thead>                   
+        <tr>
+          <th>Título</th>
+          <th>Descrição</th>
+          <th>Local</th>
+          <th>Data</th>
+          <th>Site</th>
+          <th>Link</th>
+        </tr>
+      </thead>
+      <tbody id="jobList"></tbody>
+    </table>
+  </div>
+
+  <script>
+    const toggleModeButton = document.getElementById("toggleMode");
+    toggleModeButton.addEventListener("click", toggleMode);
+
+    function toggleMode() {
+      document.body.classList.toggle("dark-mode");
+
+      if (toggleModeButton.textContent === "Modo Noturno") {
+        toggleModeButton.textContent = "Modo Padrão";
+      } else {
+        toggleModeButton.textContent = "Modo Noturno";
+      }
+    }
+
+    const websocket = new WebSocket("ws://localhost:8765");
+
+    websocket.onmessage = function(event) {
+      const job = JSON.parse(event.data);
+      const table = document.getElementById("jobList");
+
+      const row = table.insertRow();
+      const titleCell = row.insertCell();
+      const descriptionCell = row.insertCell();
+      const localCell = row.insertCell();
+      const dateCell = row.insertCell();
+      const siteCell = row.insertCell();
+      const linkCell = row.insertCell();
+
+      titleCell.textContent = job.title;
+      descriptionCell.textContent = job.description;
+      localCell.textContent = job.local;
+      dateCell.textContent = job.date;
+      siteCell.textContent = job.site;
+
+      const linkButton = document.createElement("a");
+      linkButton.href = job.link;
+      linkButton.target = "_blank";
+      linkButton.textContent = "Link";
+      linkButton.classList.add("btn", "btn-secondary", "btn-lg", "active");
+      linkCell.appendChild(linkButton);
     };
   </script>
 </body>
